--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "angular-tree-grid",
-  "version": "4.0.0",
+  "version": "4.0.2",
   "homepage": "https://github.com/debabratapatra/angular-tree-grid#readme",
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
+    "@angular/common": ">=7.0.0",
+    "@angular/core": ">=7.0.0"
   },
   "author": {
     "name": "Debabrata Patra",
@@ -32,6 +32,7 @@
     "Angular 5",
     "Angular 6",
     "Angular 7",
+    "Angular 13",
     "Opensource",
     "Angular Tree Grid",
     "Angular Sub-grid",
